# bmstu-diploma

./: .gitignore  .vale.ini  README.md
diploma/code/: .dockerignore  .gitignore  Cargo.toml  config.yaml  docker-compose.yaml  otel-collector-config.yaml  prometheus.yml
diploma/code/api/: bob.proto  executor.proto  openapi.yml
diploma/code/bob-fusion/core/: Cargo.toml
diploma/code/bob-fusion/core/src/: config.rs  lib.rs  router.rs
diploma/code/bob-fusion/core/src/services/: mod.rs  multiplex.rs
diploma/code/bob-fusion/core/src/types/: mod.rs  uri.rs
diploma/code/bob-fusion/executor/: Cargo.toml  build.rs
diploma/code/bob-fusion/executor/bob-config/bob/configs/: cluster.yaml  logger.yaml  node.yaml  node_0.yaml  node_1.yaml
diploma/code/bob-fusion/executor/src/: error.rs  lib.rs  main.rs
diploma/code/bob-fusion/executor/src/connector/: mod.rs
diploma/code/bob-fusion/executor/tests/: bob.rs
diploma/code/bob-fusion/scheduler/: Cargo.toml  build.rs
diploma/code/bob-fusion/scheduler/src/: error.rs  lib.rs  main.rs
diploma/code/bob-fusion/scheduler/src/grpc/: mod.rs
diploma/code/bob-fusion/scheduler/src/rest/: mod.rs
diploma/code/bob-fusion/scheduler/src/service/: mod.rs  planner.rs
diploma/code/bob-fusion/scheduler/src/service/cluster/: mod.rs  yaml.rs
diploma/code/cli/: Cargo.toml  build.rs
diploma/code/cli/src/: args.rs  cli.rs  lib.rs
diploma/code/dockerfiles/alpine/: Dockerfile
diploma/code/proc_macro/: Cargo.toml
diploma/code/utils/: Cargo.toml  gen_openapi.rs
nir/: Readme.md  Tectonic.toml
nir/pres/: pres copy.md  pres.md
nir/src/: _preamble.tex  biblio.bib  index.tex
nir/src/inc/: biblatex.sty  gost-numeric.bbx  slashbox.sty
nir/src/pages/: 00-abstract.tex  00-title.tex  01-abstract.tex  01-definitions.tex  02-abbreviations.tex  03-introduction.tex  04-analysis.tex  04-analysis.tex.backup  05-design.tex  08-conclusion.tex  09-biblio.tex
