[workspace.package]
version = "0.0.0"   
authors = ["Romanov Simeon ArchArcheoss@proton.me"]
repository = "https://github.com/archeoss/bmstu-diploma"
readme = "./README.md"
license-file = "./LICENSE"
edition = "2021"

[workspace]
members = [ "cli", "bob-fusion/core", "bob-fusion/executor", "bob-fusion/scheduler", "utils" ]
default-members = [ "bob-fusion/core" ]
resolver = "2"

[workspace.dependencies]
## General
tokio = { version = "1.32" }
axum = { version = "0.6" }
http = { version = "1.1" }
nutype = "0.4"
# TODO: Move to hyper 1.0
hyper = { version = "0.14" } 
## Error Handling
error-stack = "0.4"
thiserror = "1.0"
## Tonic
tonic = "0.11"
prost = "0.12"
## Logging
tracing = "0.1"
## Time
chrono = "0.4"
## Parser
serde = { version = "1.0" }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0" }
## CLI
cli = { path = "./cli" }

[profile.release]
# Optimize for size
# opt-level = "s"
# Optimize for speed
opt-level = 3 

# Slightly increase perfomance and reduce binary size
panic = "abort"
# Reduce binary size (Removes debug info)
strip = true

[profile.release-lto]
inherits = "release"
# Link Time optimization, causes a bit longer compilation
lto = true
# Maximize size reduction optimization, causes longer compilation
codegen-units = 1 

[profile.min-size]
inherits = "release"
opt-level = "s"

