[package]
name = "bob-fusion-scheduler"
build = "build.rs"
description = "BobFusion"
publish = false
keywords = [ "Bob" ]
version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

# Note: axum 0.7 and hyper 1.0 are breaking changes
[dependencies]
bob-fusion-core = { path = "../core" }

## Axum related
axum = { workspace = true, features = ["headers"] }
axum-macros = "0.3"
tower-sessions = "0.5"
tonic-reflection = "0.11"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }

## Logging
tracing = { workspace = true }
file-rotate = "0.7"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
# tracing-forest = { version = "0.1", features = ["tokio"] }

## Error Handling
error-stack = { workspace = true }
thiserror = { workspace = true }

## General
tokio = { worspace = true, features = ["rt", "macros", "rt-multi-thread" ] }
# TODO: Move to hyper 1.0
hyper = { workspace = true, features = ["http2", "client"] } 
hyper_serde = "0.13"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { version = "1.4", features = ["v4", "serde", "fast-rng"] }
futures = "0.3"
pin-project = "1.1"
# strum = { version = "0.25", features = ["derive"] }

## OpenAPI + Swagger
utoipa = { version = "4.0", features = ["yaml", "axum_extras",  "chrono", "openapi_extensions"], optional = true }
utoipa-swagger-ui = { version = "4.0", features = ["axum"], optional = true }
utoipa-redoc = { version = "1.0", features = ["axum"], optional = true }
utoipa-rapidoc = { version = "1.0", features = ["axum"], optional = true }

## Tonic
tonic = { workspace = true }
prost = { workspace = true }

## OTLP
autometrics = { version = "1.0", optional = true, features = ["prometheus-client-0_22", "otel-push-exporter-tokio", "exemplars-tracing", "prometheus-exporter"] }

## CLI
cli = { workspace = true }

# Macro (Disable for now)
# proc-macro = { path = "../proc_macro" } 

[dev-dependencies]
utoipa = { version = "4.0", features = ["yaml", "axum_extras",  "chrono", "openapi_extensions"]}

[build-dependencies]
tonic-build = "0.11"

[features]
default = [ "swagger", "otlp-exporter" ]
swagger = [ "dep:utoipa", "dep:utoipa-swagger-ui" , "dep:utoipa-redoc", "dep:utoipa-rapidoc", "bob-fusion-core/swagger" ]
otlp-exporter = [ "bob-fusion-core/otlp-exporter", "autometrics" ]

